# advent-of-code

./: .gitattributes  .gitignore  LICENSE.txt  README.md  pyproject.toml  pytest.toml  ruff.toml  ty.toml
src/advent_of_code/: __init__.py  cli.py  utils.py
src/advent_of_code/core/: discovery.py  puzzle.py  utils.py
src/advent_of_code/puzzles/year_2023/: day_02.py
src/advent_of_code/puzzles/year_2024/: day_02.py  day_03.py  day_04.py  day_05.py  day_07.py  day_09.py
src/advent_of_code/puzzles/year_2025/: day_02.py  day_05.py  day_06.py  day_07.py  day_10.py  day_12.py
src/advent_of_code/year_2023/: __init__.py  day_01.py
src/advent_of_code/year_2024/: __init__.py  day_01.py  day_05.py  day_06.py  day_08.py  day_09.py
src/advent_of_code/year_2025/: __init__.py  day_01.py  day_03.py  day_04.py  day_05.py  day_06.py  day_08.py  day_09.py  day_11.py
tests/year_2023/: test_day_01.py  test_day_02.py
tests/year_2024/: test_day_01.py  test_day_02.py  test_day_03.py  test_day_04.py  test_day_05.py  test_day_06.py  test_day_07.py  test_day_08.py  test_day_09.py
tests/year_2025/: test_day_01.py  test_day_02.py  test_day_03.py  test_day_04.py  test_day_05.py  test_day_06.py  test_day_07.py  test_day_08.py  test_day_09.py  test_day_10.py  test_day_11.py  test_day_12.py
